<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- App Strings -->
    <string name="app_name">Forage</string>

    <!-- Misc Strings -->
    <string name="unit_feet">ft</string>
    <string name="unit_miles">mi</string>
    <string name="library_icon_description">Library Icon</string>

    <!-- Permission Rationale Dialog Strings -->
    <string name="permission_dialog_exit">Exit</string>
    <string name="permission_dialog_settings">Settings</string>
    <string name="permission_dialog_permission_missing">Permission Denied!</string>

    <!-- Location Unavailable Dialog Strings -->
    <string name="location_dialog_ok">OK</string>


    <!-- Screen specific strings-->

    <!-- About Screen Strings -->
     <string name="about_version_info" formatted="false"
             tools:ignore="StringFormatInvalid">Version %1$s-%2$s (Build %3$d)</string>
    <string name="about_screen_title">About</string>
    <string name="about_info">A free and open source material design Geocaching client for Android</string>
    <string name="about_opencaching">Powered by OpenCaching</string>
    <string name="about_logo_description">Application Logo</string>
    <string name="about_libraries_header_title">Third Party Libraries</string>
    <string-array name="about_libraries_list">
        <item>Dagger 2</item>
        <item>Retrofit 2</item>
        <item>RxJava</item>
        <item>RxAndroid</item>
        <item>Butterknife</item>
        <item>Realm</item>
        <item>Icepick</item>
        <item>Signpost</item>
        <item>Material Dialogs</item>
        <item>Timber</item>
    </string-array>

    <!-- Cache Detail Strings -->
    <string name="cachedetail_difficulty_header">Difficulty</string>
    <string name="cachedetail_terrain_header">Terrain</string>
    <string name="cachedetail_description_header">Description</string>
    <string name="cachedetail_cacheinfo_header">Cache Info</string>
    <string name="cachedetail_size_header">Size</string>
    <string name="cachedetail_rating_terrain">%.1f/5</string>
    <string name="cachedetail_rating_difficulty">%.1f/5</string>
    <string name="cachedetail_error_requires_login">You must be logged in to submit a cache log!</string>

    <!-- Cache Item layout Strings -->
    <string name="cacheitem_type">%s Cache</string>
    <string name="cacheitem_terrain_icon_description">Terrain Icon</string>
    <string name="cacheitem_difficulty_icon_description">Difficulty Icon</string>
    <string name="cacheitem_size_icon_description">Size Icon</string>

    <!-- Cache List Strings -->
    <string name="cachelist_no_caches">No Downloaded Geocaches!</string>
    <string name="cachelist_no_caches_icon_description">No Geocaches Icon</string>
    <string name="cachelist_nolocation">Forage needs access to your location to find nearby geocaches. To grant this permission, click Settings, choose Permissions and turn on Location.</string>
    <string name="cachelist_error_no_internet">Unable to download Geocaches! No Internet connection.</string>
    <string name="cachelist_error_failed_parse">Error fetching Geocaches!</string>
    <string name="cachelist_retry">Retry</string>
    <string name="cachelist_error_no_location">Unable to download Geocaches! No Location available.</string>
    <string name="cachelist_screen_title">Geocaches</string>
    <string name="cachelist_action_about">About</string>
    <string name="cachelist_action_map_title">Map</string>
    <string name="cachelist_action_navigate">Navigate To</string>
    <string name="cachelist_action_login">Login</string>

    <!-- Compass Strings -->
    <string name="compass_screen_title">Compass</string>
    <string name="compass_distance_label">Distance</string>
    <string name="compass_accuracy">+/- %s</string>
    <string name="compass_loading_text">Waiting for GPS signal…</string>
    <string name="compass_loading_icon_content_description">Compass Loading Icon</string>
    <string name="compass_arrow_image_description">Compass Arrow Image</string>
    <string name="compass_location_unavailable">Location Unavailable!</string>
    <string name="compass_location_unavailable_dialog">Forage cannot get your current location in order to direct you to the geocache. Make sure Location Services is enabled.</string>

    <!-- Log Strings -->
    <string name="log_screen_title">Submit Log</string>
    <string name="log_progress_title">Submitting Geocache Log</string>
    <string name="log_progress_content">Please wait…</string>
    <string name="log_submit_error_title">Error submitting Log</string>
    <string name="log_submit_no_internet">No internet connection!</string>
    <string name="log_submit_success">Log submitted successfully!</string>
    <string name="log_submit_error_unknown">Unexpected error submitting log!</string>
    <string name="log_submit_dialog_ok">OK</string>
    <string name="log_type">Log Type:</string>
    <string name="log_comment_hint">Comment (Optional)</string>
    <string name="log_submit_description">Submit Log</string>
    <string-array name="log_types">
        <item>Found it</item>
        <item>Didn\'t find it</item>
        <item>Comment</item>
    </string-array>
    <string-array name="log_types_event">
        <item>Will attend</item>
        <item>Attended</item>
        <item>Comment</item>
    </string-array>

    <!-- Login Strings -->
    <string name="login_screen_title">Login</string>
    <string name="login_button">Log In</string>
    <string name="login_info_text">Log in to your OpenCaching account to start.</string>
    <string name="login_welcome_text">Welcome to Forage!</string>
    <string name="login_error_retry">Retry</string>
    <string name="login_error_request_token">Error connecting with OpenCaching!</string>
    <string name="login_error_access_token">Error authenticating with OpenCaching!</string>
    <string name="login_authentication_success">Successfully authenticated with OpenCaching!</string>
    <string name="login_error_no_internet">No internet connection!</string>

    <!-- Navigate Strings -->
    <string name="navigate_screen_title">Navigate to Geocache</string>
    <string name="navigate_button">Open Compass</string>
    <string name="navigate_longitude">Longitude</string>
    <string name="navigate_latitude">Latitude</string>
    <string name="navigate_invalid_latitude">Invalid latitude format!</string>
    <string name="navigate_invalid_longitude">Invalid longitude format!</string>

    <!-- Map Strings -->
    <string name="map_screen_title">Geocache Map</string>


</resources>
